added to the requirementstxt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,37 @@
+
+cloudinary
+distro
 Django
+django-ckeditor
+django-compat
+django-js-asset
+docutils
 gunicorn
+lazy-object-proxy
+MarkupSafe
+mccabe
+packaging
+parso
+Pillow
+pkgconfig
+platformdirs
+prompt-toolkit
+Pygments
+pyjnius
+pylint
+pyparsing
+PySDL2
+python-dateutil
+pytz
+requests
+six
+soupsieve
+sqlparse
+toml
+tqdm
+typed-ast
+typing_extensions
 tzdata
+
 whitenoise
+
